@@ -1,5 +1,10 @@
 2018-10-15  Jonathan Wakely  <jwakely@redhat.com>
 
+	* testsuite/22_locale/numpunct/members/char/3.cc: Adjust test to
+	account for change to glibc it_IT localedata (glibc bz#10797).
+
+2018-10-15  Jonathan Wakely  <jwakely@redhat.com>
+
 	Backport from mainline
 	2018-07-31  Jonathan Wakely  <jwakely@redhat.com>
 
